# CodeGraph

./: .gitignore  ARCHITECTURE_FRESHNESS.md  CHANGELOG.md  Cargo.toml  LAZY_REFRESH_DEMO.md  README.md  inspect_index.py  install.sh  test_mcp_operations.py  test_new_features.sh  test_summary.sh
.github/workflows/: release.yml
examples/: test_mcp_tools.rs  test_new_symbols.rs  test_operations.rs
src/: cli.rs  freshness.rs  lib.rs  main.rs  resolver.rs
src/graph/: mod.rs
src/mcp/: mod.rs  operations.rs  server.rs
src/parser/: javascript.rs  mod.rs  python.rs  rust.rs
test_project/: main.py  sample.js  sample.rs  sample.ts  utils.py
tests/: integration_test.rs  test_freshness.sh  test_mcp_client.py  test_mcp_server.py  test_operations.rs  test_resolution.py
