[package]
name = "codegraph"
version = "0.2.0"
edition = "2021"

[dependencies]
# Core graph library
petgraph = "0.6"

# CLI and serialization  
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# File system and paths
walkdir = "2.4"

# Async runtime for MCP server
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "io-std", "time"] }

# Error handling
anyhow = "1.0"

# Logging  
tracing = "0.1"
tracing-subscriber = "0.3"

# For fuzzy matching
fuzzy-matcher = "0.3"

# Additional dependencies
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }
tree-sitter = "0.25.8"
tree-sitter-python = "0.23.6"
rand = "0.9.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24.0"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
